# knaster

./: .gitignore  Cargo.toml  NOTES.md  README.md  REFACTOR.md  justfile
.github/workflows/: rust.yml
knaster/: Cargo.toml  README.md
knaster/examples/: buffer_player.rs  many_sines.rs  simple_sine.rs  visualize_graph.rs
knaster/src/: lib.rs  math_ugens.rs  node_ops.rs  prelude.rs  preludef32.rs  subprelude_fundamental_types.rs
knaster_airwindows/: Cargo.toml  README.md
knaster_airwindows/src/: galactic.rs  lib.rs
knaster_benchmarks/: Cargo.toml  README.md
knaster_benchmarks/benches/: audio_processor_inputs.rs  auto_vectorisation.rs  graph_dsp_performance.rs  lai_graph_dsp_performance.rs  wrappers_vs_nodes.rs
knaster_benchmarks/src/: lib.rs
knaster_core/: Cargo.toml  README.md
knaster_core/examples/: implement_a_gen.rs
knaster_core/src/: dsp.rs  gen.rs  lib.rs  log.rs  parameters.rs  tests.rs  ugen.rs  ugens.rs  wrappers.rs  wrappers_core.rs
knaster_core/src/dsp/: buffer.rs  wavetable.rs  xorrng.rs
knaster_core/src/parameters/: types.rs
knaster_core/src/tests/: gen_maths_tests.rs  sample_accurate_parameters.rs  utils.rs  wrapper_maths_tests.rs
knaster_core/src/ugen/: buffer.rs  closure.rs  delay.rs  dynamics.rs  envelopes.rs  math.rs  noise.rs  onepole.rs  osc.rs  pan.rs  polyblep.rs  svf.rs  util.rs
knaster_core/src/ugens/: closure.rs  envelopes.rs  math.rs  noise.rs  onepole.rs  osc.rs  pan.rs  polyblep.rs  svf.rs  util.rs
knaster_core/src/wrappers/: audio_rate.rs  closure.rs  hi_res_params.rs  math.rs  param_smoother.rs  smooth_params.rs
knaster_core/src/wrappers_core/: audio_rate.rs  closure.rs  hi_res_params.rs  math.rs  precise_timing.rs  smooth_params.rs
knaster_core_dsp/: Cargo.toml
knaster_core_dsp/src/: dsp.rs  lib.rs  test_utils.rs  ugens.rs  wrappers_core.rs
knaster_core_dsp/src/dsp/: buffer.rs  wavetable.rs
knaster_core_dsp/src/ugens/: buffer.rs  closure.rs  delay.rs  dynamics.rs  envelopes.rs  math.rs  noise.rs  onepole.rs  osc.rs  pan.rs  polyblep.rs  svf.rs  util.rs
knaster_core_dsp/src/wrappers_core/: audio_rate.rs  closure.rs  math.rs  precise_timing.rs  smooth_params.rs
knaster_graph/: Cargo.toml  README.md  TODO.md
knaster_graph/examples/: buffer_player.rs  dot_visualisation.rs  many_sines.rs  quick_test.rs  scheduling_test.rs  self_freeing_stress_test.rs
knaster_graph/src/: audio_backend.rs  block.rs  buffer_allocator.rs  connectable.rs  connectable2.rs  connectable3.rs  connectable3_2.rs  dyngen.rs  dynugen.rs  edge.rs  graph.rs  graph_edit.rs  graph_gen.rs  handle.rs  inspection.rs  lib.rs  logging.rs  node.rs  processor.rs  runner.rs  scheduling.rs  task.rs  tests.rs  wrappers.rs  wrappers_graph.rs
knaster_graph/src/audio_backend/: cpal.rs  jack.rs
knaster_graph/src/tests/: graph_tests.rs  utils.rs
knaster_graph/src/wrappers/: done.rs
knaster_graph/src/wrappers_graph/: done.rs
knaster_macros/: Cargo.toml
knaster_macros/src/: lib.rs  parameters.rs
knaster_macros/tests/: 00_no_params.rs  01_simple_param.rs  02_parameter_types.rs  03_process_block.rs  04_random_lin.rs  05_more_params.rs  06_generic_channels.rs  07_process_block_no_input.rs  08_envasr.rs  progress.rs
knaster_primitives/: Cargo.toml  LICENSE_MIT  README.md  custom.el
knaster_primitives/src/: block.rs  float.rs  lib.rs  parameters.rs  time.rs
