[package]
name = "knaster"
version = "0.1.0"
edition = "2024"

[features]
default = ["std", "cpal"]
std = ["knaster_graph/std"]
unstable = ["knaster_graph/unstable"]
sound_files = ["knaster_graph/sound_files"]
jack = ["knaster_graph/jack"]
cpal = ["knaster_graph/cpal"]

[dependencies]
knaster_graph = { path = "../knaster_graph/" }
log = "0.4"

[dev-dependencies]
color-eyre = "0.6.3"
