[package]
name = "knaster"
version = "0.1.0"
edition = "2024"

[features]
default = ["std", "cpal", "dot"]
std = ["knaster_graph/std"]
dot = ["knaster_graph/dot"]
unstable = ["knaster_graph/unstable"]
sound_files = ["knaster_graph/sound_files"]
jack = ["knaster_graph/jack"]
cpal = ["knaster_graph/cpal"]
no_denormals = ["knaster_graph/no_denormals"]

[dependencies]
knaster_graph = { path = "../knaster_graph/", default-features = false }
log = "0.4"

[dev-dependencies]
color-eyre = "0.6"
anyhow = "1"
env_logger = "0.11.8"
rand = "0.9"
open = { version = "5.3.2" }
rfd = "0.15.3"

[[example]]
name = "many_sines"
required-features = ["std", "cpal"]

[[example]]
name = "visualize_graph"
required-features = ["std", "cpal", "dot"]

[[example]]
name = "buffer_player"
required-features = ["std", "cpal"]

[[example]]
name = "simple_sine"
required-features = ["std", "cpal"]

