[package]
name = "knaster_benchmarks"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "fm_bench"
required-features = ["std", "cpal"]
[[bin]]
name = "fm_bench2"
required-features = ["std", "cpal"]
[[bin]]
name = "fm_bench_stand_alone"
required-features = ["std", "cpal"]


[dependencies]
color-eyre = "0.6.5"
knaster = { path = "../knaster", features = ["std"] }

[dev-dependencies]
criterion = "0.8"
iai = { git = "https://github.com/sigaloid/iai", rev = "6c83e942" }


[[bench]]
name = "audio_processor_inputs"
harness = false
# [[bench]]
# name = "graph_dsp_performance"
# harness = false
# [[bench]]
# name = "lai_graph_dsp_performance"
# harness = false
# [[bench]]
# name = "wrappers_vs_nodes"
# harness = false
#[[bench]]
#name = "auto_vectorisation"
#harness = false
