[package]
name = "knaster_core"
version = "0.1.0"
edition = "2024"

[features]
default = ["std"]
# Enables the alloc in no_std. `alloc` does nothing if `std` is enabled.
alloc = ["knaster_primitives/alloc", "no-std-compat/alloc", "dep:embassy-sync"]
# Enables the standard library. `alloc` does nothing if `std` is enabled.
std = ["knaster_primitives/std", "no-std-compat/std"]
# Enables unstable Rust features that may speed up execution
unstable = [
  "dep:target-features",
  "no-std-compat/unstable",
  "knaster_primitives/unstable",
]

[dependencies]
knaster_primitives = { path = "../knaster_primitives" }
knaster_macros = { path = "../knaster_macros" }

target-features = { version = "0.1.6", optional = true }
thiserror = { version = "2.0.3", default-features = false }
fastrand = { version = "2.3.0", default-features = false }
fastapprox = "0.3.1"
no_denormals = { version = "0.2.0", optional = true }
rtrb = { version = "0.3.2", default-features = false }
log = "0.4.26"
no-std-compat = "0.4.1"
embassy-sync = { version = "0.6.2", optional = true }

[dev-dependencies]
anyhow = "1.0.94"


[[example]]
name = "implement_gen"
path = "examples/implement_a_gen.rs"
required-features = ["alloc"]
