[package]
name = "knaster_graph"
version = "0.1.0"
edition = "2021"

[features]
default = ["std", "cpal", "jack"]
std = ["knaster_core/std", "slotmap/std", "thiserror/std", "dep:open"]
# Enables potential optimisations that require nightly rust
unstable = ["knaster_core/unstable"]
jack = ["dep:jack"]
assert_no_alloc = ["dep:assert_no_alloc"]
sound_files = ["knaster_core/sound_files"]

[dependencies]
knaster_core = { path = "../knaster_core" }

assert_no_alloc = { version = "1.1.2", optional = true }
cpal = { version = "0.15.3", default-features = false, optional = true }
jack = { version = "0.13.0", optional = true }
paste = "1.0.15"
rtrb = { version = "0.3.1", default-features = false }
slotmap = { version = "1.0", default-features = false }
thiserror = { version = "2.0.4", default-features = false }
open = { version = "5.3.1", optional = true }
smallvec = { version = "1.14.0", features = ["union", "const_generics", "const_new"] }

[dev-dependencies]
anyhow = "1.0.94"
rand = "0.8.5"

[[example]]
name = "many_sines"
features = ["alloc"]
