[package]
name = "knaster_graph"
version = "0.1.0"
edition = "2024"

[features]
default = ["std", "cpal", "jack"]
std = [
  "knaster_core/std",
  "slotmap/std",
  "thiserror/std",
  "dep:open",
  "ecow/std",
]
# Enables potential optimisations that require nightly rust
unstable = ["knaster_core/unstable"]
jack = ["dep:jack"]
assert_no_alloc = ["dep:assert_no_alloc"]
sound_files = ["knaster_core/sound_files"]

[dependencies]
knaster_core = { path = "../knaster_core" }

assert_no_alloc = { version = "1.1.2", optional = true }
cpal = { version = "0.15.3", default-features = false, optional = true }
jack = { version = "0.13.2", optional = true }
paste = "1.0.15"
rtrb = { version = "0.3.2", default-features = false }
slotmap = { version = "1.0", default-features = false }
thiserror = { version = "2", default-features = false }
open = { version = "5.3.2", optional = true }
smallvec = { version = "1.14.0", features = [
  "union",
  "const_generics",
  "const_new",
] }
log = "0.4.26"
ecow = { version = "0.2.3", default-features = false }

[dev-dependencies]
anyhow = "1"
env_logger = "0.11.8"
rand = "0.9"

[[example]]
name = "many_sines"
features = ["alloc"]
