[package]
name = "knaster_macros"
version = "0.1.0"
edition = "2024"

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
proc-macro2 = "1.0"
quote = "1.0"
proc-macro-crate = "3.3.0"

[lib]
proc-macro = true

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }
knaster_core = { path = "../knaster_core" }

[[test]]
name = "tests"
path = "tests/progress.rs"
