[package]
name = "knaster_macros"
version = "0.1.0"
edition = "2024"

[features]
fail_on_parameter_signature_conversion = []

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
proc-macro2 = "1.0"
quote = "1.0"
proc-macro-crate = "3.3.0"
knaster_primitives = { path = "../knaster_primitives" }
darling = "0.20.11"

[lib]
proc-macro = true

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }
knaster_core = { path = "../knaster_core", default-features = false }

[[test]]
name = "tests"
path = "tests/progress.rs"
