[package]
name = "knaster_primitives"
version = "0.1.0"
edition = "2024"

[features]
# Enables core::alloc for heap allocated datastructures
alloc = ["num-traits/libm"]
# Use libm for floating point maths, incompatible with the std feature
libm = ["num-traits/libm"]
# Use std for floating point maths, incompatible with the libm feature
std = ["num-traits/std"]
deafault = ["alloc"]
serde_derive = ["dep:serde"]

[dependencies]
num-derive = "0.4.2"
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
numeric-array = { version = "0.6.1", default-features = false }
serde = { version = "1.0", features = ["derive"], optional = true }
